--- a/public/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL /005. JOINS.html
+++ b/public/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL /005. JOINS.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>00. Database and Tables</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>005. JOINS</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7508,129 +7508,153 @@ a.anchor-link {
   }
 </style>
 <!-- End of mermaid configuration -->
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <style>
-        body { background-color: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
-        h1 { font-weight: 700; font-size: 2.5rem; }
-        .container { max-width: 900px; margin: 0 auto; }
-        details { margin-bottom: 1rem; background: #fff; border-radius: 8px; padding: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-        summary { font-weight: 600; font-size: 1.1rem; cursor: pointer; position: relative; padding-right: 20px; }
-        summary::after { content: '▶'; position: absolute; right: 0; transition: transform 0.3s ease; }
-        details[open] > summary::after { transform: rotate(90deg); }
-        .notebook-entry { background: #fff; border: 1px solid #dee2e6; padding: 12px 16px; border-radius: 6px; margin-bottom: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.03); }
-        .notebook-entry a { color: #0d6efd; font-weight: 600; font-size: 1rem; text-decoration: none; }
-        .notebook-entry a:hover { text-decoration: underline; }
-        .created-date { margin-left: 20px; font-size: 0.85rem; color: #6c757d; display: flex; align-items: center; }
-        .arrow { margin-right: 6px; color: #6c757d; }
+            body { @apply bg-gray-50 font-sans; }
+            .container { @apply max-w-4xl mx-auto px-4; }
+            details { @apply mb-4 bg-white rounded-lg p-4 shadow-sm; }
+            summary { @apply font-semibold text-lg cursor-pointer relative pr-6 text-blue-600; }
+            summary::after { content: '▶'; @apply absolute right-0 transition-transform duration-300; }
+            details[open] > summary::after { @apply rotate-90; }
+            .notebook-entry { @apply bg-white border border-gray-200 p-4 rounded-md mb-2 shadow-sm; }
+            .notebook-entry a { @apply text-gray-800 font-semibold text-base no-underline hover:text-blue-600; }
+            .created-date { @apply ml-4 text-sm text-gray-500 flex items-center; }
+            .arrow { @apply mr-2 text-gray-400; }
         </style>
-        
+    
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=f81d24a8-dbac-45b0-bd2e-6988e02db9db">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=2e2979aa-7b93-485d-9728-36ac638c888c">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="MySQL-Learning">MySQL Learning<a class="anchor-link" href="#MySQL-Learning">¶</a></h1><hr/>
-<h3 id="The-following-notebooks:">The following notebooks:<a class="anchor-link" href="#The-following-notebooks:">¶</a></h3><ol>
-<li>Beginner SQl,</li>
-<li>Intermediate SQL</li>
-<li>Advanced SQL</li>
-</ol>
-<h3>are structured around <a href="https://www.youtube.com/watch?v=rGx1QNdYzvs&amp;list=PLUaB-1hjhk8FE_XZ87vPPSfHqb6OcM0cF" target="_blank">Alex the Analyst's Data Analyst Bootcamp </a></h3>
+<style>
+@media (max-width: 600px) {
+    img[style] { width: 90% !important; }
+}
+</style>
+<h1 id="JOINS">JOINS<a class="anchor-link" href="#JOINS">¶</a></h1><hr/>
+<h4 id="A-JOIN-in-MySQL-combines-rows-from-two-or-more-tables-based-on-a-related-column-between-them.">A JOIN in MySQL combines rows from two or more tables based on a related column between them.<a class="anchor-link" href="#A-JOIN-in-MySQL-combines-rows-from-two-or-more-tables-based-on-a-related-column-between-them.">¶</a></h4><h4 id="The-default-join-in-MySQL-workbench-is-INNER-JOIN">The default join in MySQL workbench is INNER JOIN<a class="anchor-link" href="#The-default-join-in-MySQL-workbench-is-INNER-JOIN">¶</a></h4><hr/>
+<img alt="No description has been provided for this image" src="static/MYSQL_JOINS.png" style="display: flex; width: 60%; margin:auto;"/>
+<p style="text-align: center;">full join == full outer join</p>
 <hr/>
-<h4 id="The-introductory-MySQL-videos-cover-the-database-and-database-tables-that-will-be-used-throughout-the-MySQL-course-content:">The introductory MySQL videos cover the database and database tables that will be used throughout the MySQL course content:<a class="anchor-link" href="#The-introductory-MySQL-videos-cover-the-database-and-database-tables-that-will-be-used-throughout-the-MySQL-course-content:">¶</a></h4><hr/>
-<h2 id="Database-Schema:-Parks_and_Recreation">Database Schema: Parks_and_Recreation<a class="anchor-link" href="#Database-Schema:-Parks_and_Recreation">¶</a></h2><h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: employee_demographics</div></strong></p>
-<table>
-<thead>
-<tr>
-<th>Column Name</th>
-<th>Data Type</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>employee_id</td>
-<td>INT (PK)</td>
-</tr>
-<tr>
-<td>first_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>last_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>age</td>
-<td>INT</td>
-</tr>
-<tr>
-<td>gender</td>
-<td>VARCHAR(10)</td>
-</tr>
-<tr>
-<td>birth_date</td>
-<td>DATE</td>
-</tr>
-</tbody>
-</table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: employee_salary</div></strong></p>
-<table>
-<thead>
-<tr>
-<th>Column Name</th>
-<th>Data Type</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>employee_id</td>
-<td>INT</td>
-</tr>
-<tr>
-<td>first_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>last_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>occupation</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>salary</td>
-<td>INT</td>
-</tr>
-<tr>
-<td>dept_id</td>
-<td>INT</td>
-</tr>
-</tbody>
-</table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: parks_departments</div></strong></p>
-<table>
-<thead>
-<tr>
-<th>Column Name</th>
-<th>Data Type</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>department_id</td>
-<td>INT (AI, PK)</td>
-</tr>
-<tr>
-<td>department_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-</tbody>
-</table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2>
+<p><strong>SYNTAX:</strong></p>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code> <strong>LEFT (first table)</strong><br/>
+<code>INNER JOIN employee_salary AS sal</code> <strong>RIGHT (second table)</strong><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
+<hr/>
+<h3 id="An-INNER-JOIN">An <strong>INNER JOIN</strong><a class="anchor-link" href="#An-INNER-JOIN">¶</a></h3><hr/>
+<ul>
+<li>Only returns rows where there’s a match in both tables.</li>
+<li>If no match exists, that row won’t appear in the result.</li>
+</ul>
+<p>In the following we are:</p>
+<ul>
+<li>selecting everything</li>
+<li>from employee_demographics with an alias of "dem",</li>
+<li>inner joining employee_demogrpahics as "sal"</li>
+<li>on the employee_id (column with similar/matching data)</li>
+</ul>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>INNER JOIN employee_salary AS sal</code> <br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> Ron Swanson with employee_id value "2" does not appear in the output. This is because an Inner Join only joins/ outputs selected data on values that appear in both tables. So in employee_salary Ron Swanson is there and has an employee_id of "2" but he does not appear employee_demographics.</p>
+<img alt="No description has been provided for this image" src="static/INNER_JOIN_01.png" style="width: 90%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="OUTER-JOINS---LEFT-and-RIGHT">OUTER JOINS - <strong>LEFT</strong> and <strong>RIGHT</strong><a class="anchor-link" href="#OUTER-JOINS---LEFT-and-RIGHT">¶</a></h3><hr/>
+<p>A <strong>LEFT JOIN</strong> is going to take everything from the left table, even if there are no matches in the right table, and return any matches from the right table. Vice versa for <strong>RIGHT JOIN</strong></p>
+<p>We are:</p>
+<ul>
+<li>selecting everything</li>
+<li>from employee_demographics as 'dem'</li>
+<li>outer right joining on employee_salary as 'sal'</li>
+<li>on the common column - employee_id</li>
+</ul>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>RIGHT JOIN employee_salary AS sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> Previously we did an INNER JOIN on these tables (only returning rows with matching employee_id in both tables) and noticed that ron swanson was excluded from the output because he did not have an employee_id in both tables. Now that we are doing an OUTER RIGHT JOIN (right join is everything from right table and then matching values from left table on employee_id) he now appears in the output</p>
+<img alt="No description has been provided for this image" src="static/OUTER_RIGHT_JOIN_01.png" style="width: 90%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="SELF-JOIN">SELF JOIN<a class="anchor-link" href="#SELF-JOIN">¶</a></h3><hr/>
+<p>A self join is when you join the same table to itself.</p>
+<p><strong>Line 9 explained: (ON sal1.employee_id + 1 = sal2.employee_id)</strong></p>
+<ul>
+<li>ON sal1.employee_id + 1 = sal2.employee_id</li>
+<li>The join condition: for each row in sal1, find the row in sal2 whose employee_id equals sal1.employee_id + 1.</li>
+<li>Practically, that pairs id 1 → 2, 2 → 3, etc. If there is no employee_id exactly one greater, that sal1 row is excluded (because it’s an inner join).</li>
+</ul>
+<p><code>SELECT sal1.first_name AS secret_santa,</code><br/>
+<code>sal1.last_name as secret_santa,</code><br/>
+<code>sal1.employee_id,</code><br/>
+<code>sal2.first_name as emp_name,</code><br/>
+<code>sal2.last_name as emp_surname,</code><br/>
+<code>sal2.employee_id</code><br/>
+<code>FROM employee_salary AS sal1</code><br/>
+<code>JOIN employee_salary AS sal2</code><br/>
+<code>ON sal1.employee_id + 1 = sal2.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> From the explanation of line 9 above if we had ON sal1.employee_id <strong><span style="color: red;">-</span></strong> 1 = sal2.employee_id instead of '+' then we would need to match values from the right table to the left table where employee_id - 1 = left.employee_id 
+since the first value is 1 in employee_id there is no emoloyee_id with 0 so therefore it is skipped. 2 - 1 = 1 however so employee_id with value 2 will match with employee_id with 1</p>
+<img alt="No description has been provided for this image" src="static/SELF_JOIN_01.png" style="width: 40%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="FULL-JOIN">FULL JOIN<a class="anchor-link" href="#FULL-JOIN">¶</a></h3><hr/>
+<p>In MySQL, there is no built-in FULL OUTER JOIN (unlike SQL Server, PostgreSQL, or Oracle).
+But you can <strong>simulate</strong> it using a combination of LEFT JOIN, RIGHT JOIN, and UNION.</p>
+<p><code>SELECT dem.first_name, dem.last_name, sal.occupation, dem.age</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>LEFT JOIN employee_salary AS sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code></p>
+<p><code>UNION</code></p>
+<p><code>SELECT dem.first_name, dem.last_name, sal.occupation, dem.age</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>RIGHT JOIN employee_salary AS sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code></p>
+<img alt="No description has been provided for this image" src="static/FULL_JOIN_01.png" style="width: 50%; margin: auto;"/>
+<hr/>
+<h3 id="MULTIPLE-TABLE-JOINS">MULTIPLE TABLE JOINS<a class="anchor-link" href="#MULTIPLE-TABLE-JOINS">¶</a></h3><hr/>
+<p>We can JOIN multiple tables together</p>
+<p>We are:</p>
+<ul>
+<li>selecting everything</li>
+<li>from employee_dem as dem</li>
+<li>inner joining semployee_sal as sal</li>
+<li>on employee_id</li>
+<li>then joining parks_departments as dep</li>
+<li>on the related column dept_id from employee_salary</li>
+</ul>
+<p><strong>Note:</strong> Even though department id is not included in employee_demographics it is included in employee_salary so we can join a third table together with this relation.</p>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>INNER JOIN employee_salary as sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>INNER JOIN parks_departments as dep</code><br/>
+<code>ON dep.department_id = sal.dept_id</code><br/>
+<code>;</code></p>
+<img alt="No description has been provided for this image" src="static/MULTIPLE_JOINS.png" style="width: 90%; margin: auto;"/>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=6417cd1c-1578-4e37-ab1b-171f05ed8450">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
