--- a/public/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL /006. UNIONS.html
+++ b/public/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL /006. UNIONS.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>00. Database and Tables</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>006. UNIONS</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7508,129 +7508,154 @@ a.anchor-link {
   }
 </style>
 <!-- End of mermaid configuration -->
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <style>
-        body { background-color: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
-        h1 { font-weight: 700; font-size: 2.5rem; }
-        .container { max-width: 900px; margin: 0 auto; }
-        details { margin-bottom: 1rem; background: #fff; border-radius: 8px; padding: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-        summary { font-weight: 600; font-size: 1.1rem; cursor: pointer; position: relative; padding-right: 20px; }
-        summary::after { content: '▶'; position: absolute; right: 0; transition: transform 0.3s ease; }
-        details[open] > summary::after { transform: rotate(90deg); }
-        .notebook-entry { background: #fff; border: 1px solid #dee2e6; padding: 12px 16px; border-radius: 6px; margin-bottom: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.03); }
-        .notebook-entry a { color: #0d6efd; font-weight: 600; font-size: 1rem; text-decoration: none; }
-        .notebook-entry a:hover { text-decoration: underline; }
-        .created-date { margin-left: 20px; font-size: 0.85rem; color: #6c757d; display: flex; align-items: center; }
-        .arrow { margin-right: 6px; color: #6c757d; }
+            body { @apply bg-gray-50 font-sans; }
+            .container { @apply max-w-4xl mx-auto px-4; }
+            details { @apply mb-4 bg-white rounded-lg p-4 shadow-sm; }
+            summary { @apply font-semibold text-lg cursor-pointer relative pr-6 text-blue-600; }
+            summary::after { content: '▶'; @apply absolute right-0 transition-transform duration-300; }
+            details[open] > summary::after { @apply rotate-90; }
+            .notebook-entry { @apply bg-white border border-gray-200 p-4 rounded-md mb-2 shadow-sm; }
+            .notebook-entry a { @apply text-gray-800 font-semibold text-base no-underline hover:text-blue-600; }
+            .created-date { @apply ml-4 text-sm text-gray-500 flex items-center; }
+            .arrow { @apply mr-2 text-gray-400; }
         </style>
-        
+    
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=f81d24a8-dbac-45b0-bd2e-6988e02db9db">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=ba50a805-cc3b-4d0d-89eb-c4221af310a4">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="MySQL-Learning">MySQL Learning<a class="anchor-link" href="#MySQL-Learning">¶</a></h1><hr/>
-<h3 id="The-following-notebooks:">The following notebooks:<a class="anchor-link" href="#The-following-notebooks:">¶</a></h3><ol>
-<li>Beginner SQl,</li>
-<li>Intermediate SQL</li>
-<li>Advanced SQL</li>
+<style>
+@media (max-width: 600px) {
+    img[style] { width: 90% !important; }
+}
+</style>
+<h1 id="UNIONS">UNIONS<a class="anchor-link" href="#UNIONS">¶</a></h1><hr/>
+<p>A UNION is used to combine the results of two or more SELECT queries into a single result set.</p>
+<p>What <strong>UNION</strong> Does:</p>
+<ul>
+<li>It stacks results vertically (one query’s rows on top of another’s).</li>
+<li>It only works when the SELECT statements have:<ol>
+<li>The same number of columns</li>
+<li>Compatible data types in each column position</li>
 </ol>
-<h3>are structured around <a href="https://www.youtube.com/watch?v=rGx1QNdYzvs&amp;list=PLUaB-1hjhk8FE_XZ87vPPSfHqb6OcM0cF" target="_blank">Alex the Analyst's Data Analyst Bootcamp </a></h3>
-<hr/>
-<h4 id="The-introductory-MySQL-videos-cover-the-database-and-database-tables-that-will-be-used-throughout-the-MySQL-course-content:">The introductory MySQL videos cover the database and database tables that will be used throughout the MySQL course content:<a class="anchor-link" href="#The-introductory-MySQL-videos-cover-the-database-and-database-tables-that-will-be-used-throughout-the-MySQL-course-content:">¶</a></h4><hr/>
-<h2 id="Database-Schema:-Parks_and_Recreation">Database Schema: Parks_and_Recreation<a class="anchor-link" href="#Database-Schema:-Parks_and_Recreation">¶</a></h2><h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: employee_demographics</div></strong></p>
+</li>
+</ul>
+<p>Types of <strong>UNIONS</strong>:</p>
+<ol>
+<li>UNION → combines results and removes duplicates (default behavior).</li>
+<li>UNION ALL → combines results without removing duplicates (faster since no deduplication).</li>
+</ol>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><h4 id="Suppose-we-have-the-following-two-tables:">Suppose we have the following two tables:<a class="anchor-link" href="#Suppose-we-have-the-following-two-tables:">¶</a></h4><p><strong><div style="text-align: center;">customers_2024</div></strong></p>
 <table>
 <thead>
 <tr>
-<th>Column Name</th>
-<th>Data Type</th>
+<th>id</th>
+<th>name</th>
+<th>city</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>employee_id</td>
-<td>INT (PK)</td>
+<td>1</td>
+<td>Alice</td>
+<td>Durban</td>
 </tr>
 <tr>
-<td>first_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>last_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>age</td>
-<td>INT</td>
-</tr>
-<tr>
-<td>gender</td>
-<td>VARCHAR(10)</td>
-</tr>
-<tr>
-<td>birth_date</td>
-<td>DATE</td>
+<td>2</td>
+<td>John</td>
+<td>Joburg</td>
 </tr>
 </tbody>
 </table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: employee_salary</div></strong></p>
+<hr style="width: 30%; margin: auto;"/>
+<p><strong><div style="text-align: center;">customers_2025</div></strong></p>
 <table>
 <thead>
 <tr>
-<th>Column Name</th>
-<th>Data Type</th>
+<th>id</th>
+<th>name</th>
+<th>city</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>employee_id</td>
-<td>INT</td>
+<td>3</td>
+<td>Neo</td>
+<td>Pretoria</td>
 </tr>
 <tr>
-<td>first_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>last_name</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>occupation</td>
-<td>VARCHAR(50)</td>
-</tr>
-<tr>
-<td>salary</td>
-<td>INT</td>
-</tr>
-<tr>
-<td>dept_id</td>
-<td>INT</td>
+<td>4</td>
+<td>Alice</td>
+<td>Durban</td>
 </tr>
 </tbody>
 </table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p><strong><div style="text-align: center;">Table: parks_departments</div></strong></p>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><p>We can perform the following UNION to combine both tables' data</p>
+<p><code>SELECT name, city FROM customers_2024</code><br/>
+<code>UNION</code><br/>
+<code>SELECT name, city FROM customers_2025;</code></p>
+<p><strong><div style="text-align: center;">customers_union</div></strong></p>
 <table>
 <thead>
 <tr>
-<th>Column Name</th>
-<th>Data Type</th>
+<th>name</th>
+<th>city</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>department_id</td>
-<td>INT (AI, PK)</td>
+<td>Alice</td>
+<td>Durban</td>
 </tr>
 <tr>
-<td>department_name</td>
-<td>VARCHAR(50)</td>
+<td>John</td>
+<td>Joburg</td>
+</tr>
+<tr>
+<td>Neo</td>
+<td>Pretoria</td>
+</tr>
+<tr>
+<td>Alice</td>
+<td>Durban</td>
 </tr>
 </tbody>
 </table>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h4 id="We-can-also-use-UNION-to-combine-results-from-different-conditions-or-even-different-tables,-while-adding-custom-labels-to-categorize-the-rows.">We can also use UNION to combine results from different conditions or even different tables, while adding custom labels to categorize the rows.<a class="anchor-link" href="#We-can-also-use-UNION-to-combine-results-from-different-conditions-or-even-different-tables,-while-adding-custom-labels-to-categorize-the-rows.">¶</a></h4><p><code>SELECT first_name, last_name, 'Old_Man' as label</code><br/>
+<code>FROM employee_demographics</code><br/>
+<code>WHERE age &gt; 40 and gender = 'Male'</code></p>
+<p><code>UNION</code></p>
+<p><code>SELECT first_name, last_name, 'Old_lady' as label</code><br/>
+<code>FROM employee_demographics</code><br/>
+<code>WHERE age &gt; 40 and gender = 'Female'</code></p>
+<p><code>UNION</code></p>
+<p><code>SELECT first_name, last_name, 'Highly Paid Employee' as label</code><br/>
+<code>FROM employee_salary</code><br/>
+<code>WHERE salary &gt; 70000</code></p>
+<p><code>ORDER BY first_name, last_name;</code></p>
+<img alt="No description has been provided for this image" src="static/UNION_01.png" style="display: flex; width: 50%; margin:auto;"/>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=069755b2-5711-44dc-a568-b4d1ab03d3ac">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
