--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ details details summary {
   <a href='pyodide.html' class='btn btn-outline-primary btn-sm me-2'>🐍 Run Python</a>
   <a href='sql_editor.html' class='btn btn-outline-primary btn-sm me-2'>📑 Run SQL</a>
   <a href='javascript_web_editor.html' class='btn btn-outline-primary btn-sm me-2'>👾 Run JavaScript</a>
+  <a href='https://quiz-brandonfourie.pythonanywhere.com/' class='btn btn-outline-primary btn-sm me-2'>🧐 Take a Quiz</a>
 </div>
 <input type='text' id='searchBox' class='form-control mb-4' placeholder='🔍 Search notebooks...'>
 <div style='margin-top:10px; text-align:center;'>
