--- a/notebooks/Leetcode Practice/Leetcode/Arrays & Strings/3. Longest Substring without repeating characters - medium.html
+++ b/notebooks/Leetcode Practice/Leetcode/Arrays & Strings/3. Longest Substring without repeating characters - medium.html
@@ -7508,8 +7508,8 @@ a.anchor-link {
   }
 </style>
 <!-- End of mermaid configuration -->
-<link rel="stylesheet" href="../../assets/notebook.css">
-<script src="../../assets/notebook.js"></script>
+<link rel="stylesheet" href="../../../../assets/notebook.css">
+<script src="../../../../assets/notebook.js"></script>
 
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
