updated learning notebooks lms

--- a/notebooks/Terminal/Terminal.html
+++ b/notebooks/Terminal/Terminal.html
@@ -7515,10 +7515,14 @@ a.anchor-link {
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 
 <nav class="notebook-top-nav">
-  <a href="https://brolo231.github.io/Learning-Notebooks/">🏠 Home</a>
+  <div class="nav-left">
+    <a href="https://brolo231.github.io/Learning-Notebooks/">🏠 Home</a>
+    <span id="breadcrumb"></span>
+  </div>
 </nav>
 
 <div class="slide-wrapper">
+    <a href="#toc">📑 Contents</a>
   <div class="slide-controls">
     <button onclick="prevSlide()">⬅</button>
     <span id="slide-indicator"></span>
@@ -7957,6 +7961,9 @@ a.anchor-link {
 </div>
 </div>
 </main></section>
+  
+  <div class="page-jump" id="page-jump"></div>
+  
 </div>
 </body>
 </html>
